--- a/css/style.css
+++ b/css/style.css
@@ -173,14 +173,14 @@ header h2 {
 }
 
 #main h2 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: 22px;
+  /*font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; */
+  font-size: 15px;
   font-weight: bold;
   margin-bottom: 8px;
   color: #474747;
 } 
 #main h2:before {
-  content: "//";
+  content: "Entry URL: ";
   color: #9ddcff;
   padding-right: 0.3em;
 }
